registration-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - springboot.vamsiawstraining.com
    secretName: spring-tls
  rules:
  - host: springboot.vamsiawstraining.com
    http:
      paths:
      - path: /enrollForCourse
        backend:
          serviceName: springboot-microservice-registration-svc
          servicePort: 9093
